# withings-cli

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/withings_cli/: api.py  auth.py  cli.py  config.py  models.py
tests/: conftest.py  test_api.py  test_auth.py
